--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "cordova-browser": "^5.0.3",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-whitelist": "^1.3.3",
+        "draggable": "^4.2.0",
         "idiom.js": "^1.0.0",
         "phaser-ce": "^2.10.0",
         "webfontloader": "^1.6.28"
