--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "cordova-plugin-whitelist": "^1.3.3",
         "draggable": "^4.2.0",
         "idiom.js": "^1.0.0",
+        "nipplejs": "^0.8.0",
         "phaser-ce": "^2.10.0",
         "webfontloader": "^1.6.28"
     },
