--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@babel/core": "^7.4.4",
+        "@babel/register": "^7.4.4",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-loader": "^7.1.2",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
         "browser-sync": "^2.23.6",
         "browser-sync-webpack-plugin": "^2.0.1",
         "clean-webpack-plugin": "^0.1.18",
