--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "PhaserES6Webpack",
+    "name": "soul-collector",
     "version": "1.2.1",
     "description": "",
-    "author": "leandro cabrera <leandcabrera@gmail.com>",
+    "author": "Denise Buder, Lukas Seiwald, Alexander Tischhart",
     "main": "index.js",
     "scripts": {
         "dev": "webpack",
@@ -25,7 +25,6 @@
         "clean-webpack-plugin": "^0.1.18",
         "commitizen": "^2.10.1",
         "copy-webpack-plugin": "^4.4.1",
-        "cordova": "^8.0.0",
         "cz-conventional-changelog": "^2.1.0",
         "eslint": "^4.17.0",
         "eslint-config-standard": "^10.2.1",
@@ -39,25 +38,11 @@
         "webpack": "^3.11.0"
     },
     "dependencies": {
-        "cordova-android": "^7.0.0",
-        "cordova-browser": "^5.0.3",
-        "cordova-ios": "^4.5.4",
-        "cordova-plugin-whitelist": "^1.3.3",
         "dat.gui": "^0.7.6",
         "idiom.js": "^1.0.0",
         "nipplejs": "^0.8.1",
         "phaser-ce": "^2.10.0",
         "webfontloader": "^1.6.28"
-    },
-    "cordova": {
-        "platforms": [
-            "android",
-            "browser",
-            "ios"
-        ],
-        "plugins": {
-            "cordova-plugin-whitelist": {}
-        }
     },
     "config": {
         "commitizen": {
