--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "clean-webpack-plugin": "^0.1.18",
         "commitizen": "^2.10.1",
         "copy-webpack-plugin": "^4.4.1",
+        "css-loader": "^2.1.1",
         "cz-conventional-changelog": "^2.1.0",
         "eslint": "^4.17.0",
         "eslint-config-standard": "^10.2.1",
@@ -33,8 +34,13 @@
         "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^3.0.1",
         "expose-loader": "^0.7.4",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^3.0.1",
         "html-webpack-plugin": "^2.30.1",
         "mocha": "^6.1.4",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
         "webpack": "^3.11.0"
     },
     "dependencies": {
