--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.4.4",
-        "@babel/register": "^7.4.4",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-loader": "^7.1.2",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
         "browser-sync": "^2.23.6",
         "browser-sync-webpack-plugin": "^2.0.1",
         "clean-webpack-plugin": "^0.1.18",
@@ -46,8 +43,7 @@
     "dependencies": {
         "dat.gui": "^0.7.6",
         "idiom.js": "^1.0.0",
-        "nipplejs": "^0.8.1",
-        "phaser-ce": "^2.10.0",
+        "phaser-ce": "2.10.0",
         "webfontloader": "^1.6.28"
     },
     "config": {
