--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,67 @@
     "browser": true
   },
   "rules": {
+    "array-bracket-spacing": [2, "never"],
+    "arrow-body-style": [2, "always"],
+    "arrow-parens": [2, "always"],
+    "arrow-spacing": 2,
+    "block-scoped-var": 2,
+    "block-spacing": 2,
+    "brace-style": 2,
+    "callback-return": 2,
+    "camelcase": 2,
+    "comma-dangle": 2,
+    "comma-spacing": 2,
+    "comma-style": 2,
+    "constructor-super": 2,
+    "curly": 2,
+    "default-case": 2,
+    "dot-location": [2, "property"],
+    "eqeqeq": 2,
+    "for-direction": 2,
+    "func-call-spacing": 2,
+    "func-style": [2, "declaration", { "allowArrowFunctions": true }],
+    "function-paren-newline": [2, "never"],
+    "handle-callback-err": 2,
+    "indent": [2, "tab"],
+    "keyword-spacing": 2,
+    "linebreak-style": 2,
+    "max-len": 2,
+    "new-cap": 2,
+    "newline-after-var": 2,
+    "no-alert": 2,
+    "no-console": 2,
+    "no-dupe-class-members": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-duplicate-imports": 2,
+    "no-else-return": 2,
+    "no-empty": 2,
+    "no-empty-function": 2,
+    "no-extra-semi": 2,
+    "no-fallthrough": 2,
+    "no-inline-comments": 2,
+    "no-lone-blocks": 2,
+    "no-lonely-if": 2,
+    "no-multi-spaces": 2,
+    "no-multiple-empty-lines": 2,
+    "no-plusplus": 2,
+    "no-spaced-func": 2,
+    "no-unreachable": 2,
+    "no-unused-vars": 2,
+    "no-useless-concat": 2,
+    "no-useless-return": 2,
+    "no-var": 2,
+    "no-whitespace-before-property": 2,
+    "one-var-declaration-per-line": 2,
+    "prefer-const": 2,
+    "quotes": [2, "single"],
+    "semi": [2, "always"],
+    "semi-style": [2],
+    "sort-imports": 2,
+    "space-before-blocks": 2,
+    "space-in-parens": 2,
+    "spaced-comment": 2,
     "import/no-unresolved": [2]
   },
   "globals": {
