--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "webpack",
         "deploy": "webpack --config webpack.production.config.js",
         "lint": "eslint './src/**/*.js'",
-				"lint2": "eslint './src/js/Particle.js'",
+				"lint2": "eslint './src/js/game.js'",
         "test": "mocha"
     },
     "license": "MIT",
